--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,6 @@
 
 html {
     font-family: 'Nunito', sans-serif;
-    background: var(--background);
-    color: var(--foreground);
+    background-color: #000;
+    color: #fff;
 }
