--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 html {
-    font-family: 'Nunito', sans-serif;
-    background-color: #000;
-    color: #fff;
+	font-family: "Nunito", sans-serif;
+	background-color: #000;
+	color: #fff;
+	scroll-behavior: smooth;
 }
